--- a/main.css
+++ b/main.css
@@ -1,39 +1,113 @@
-html, body, h1 {
+html, body, h1, p, div {
   margin: 0;
   padding: 0;
 }
-body {
-
+a {
+  text-decoration: none;
 }
-.title {
-  font-weight: 700;
+body {
+  color: rgb(77, 77, 77);
 }
 .whole-wrapper {
   margin: 0 auto;
   max-width: 560px;
-  padding: 40px 20px;
+  padding: 40px 20px 60px;
+}
+.title {
+  background: #eff4ff;
+  border-radius: 5px;
+  font-size: 20px;
+  text-align: center;
+  padding: 5px 10px 5px;
+  position: relative;
+}
+.title:before {
+  background: #c9e2ff;
+  border-radius: 50%;
+  color: #153c6e;
+  content: "\f121";
+  font-family: "Font Awesome 5 Free";
+  font-size: 30px;
+  font-weight: 900;
+  height: 50px;
+  left: 0;
+  line-height: 50px;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  width: 50px;
+}
+.jspic {
+  display: block;
+  margin: 60px auto 0;
+  width: 70%;
 }
 .sub-title {
-  margin-top: 40px;
+  background-color: #ffeec9;
+  border-radius: 5px;
+  margin: 100px auto 0;
+  padding: 2px 20px;
+  position: relative;
+  text-align: center;
+  width: 80%;
 }
-
+.sub-title:before {
+  position: absolute;
+  font-family: "Font Awesome 5 Free";
+  content: "\f0eb";
+  background: #ffca2c;
+  color: white;
+  font-weight: 900;
+  font-size: 15px;
+  border-radius: 50%;
+  left: -10px;
+  width: 25px;
+  height: 25px;
+  line-height: 25px;
+  text-align: center;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.sub-title:after {
+  /*吹き出しのちょこんと出た部分*/
+  content: '';
+  display: block;
+  position: absolute;
+  left: 10px;
+  height: 0;
+  width: 0;
+  border-top: 7px solid transparent;
+  border-bottom: 7px solid transparent;
+  border-left: 12px solid #ffca2c;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
 /*  */
 .framework-wrapper {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 40px;
+  justify-content: space-around;
+  margin-top: 100px;
 }
 .framework-wrapper p {
   align-items: center;
   border-radius: 50%;
-  box-shadow: 10px 10px black;
+  box-shadow: 10px 10px rgb(128, 128, 128);
   display: flex;
-  flex-shrink: 0;
+  font-weight: 700;
   height: 100px;
   justify-content: center;
-  margin: 10px 20px;
+  margin: 15px 30px;
+  transition: 0.2s;
   width: 100px;
 }
+.framework-wrapper a:first-child p {
+  margin: 10px 20px 10px 0;
+} 
 .framework-wrapper p:hover {
   box-shadow: none;
   transform: translate(10px, 10px);
@@ -57,4 +131,18 @@ body {
 .Svelte {
   background-color: orange;
   color: white;
+}
+
+/* start geek */
+.start-geek {
+  background-color:rgb(209, 209, 209);
+  border: none;
+  color: white;
+  cursor: pointer;
+  font-size: 20px;
+  font-weight: 700;
+  height: 60px;
+  margin-top: 100px;
+  outline: none;
+  width: 100%;
 }
